feat: create header validation (#263)
